--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>This page is not ready yet!</h1>
-				<p>Please visit <a href="https://ewindar.weebly.com/">here.</a></p>
+				<p>Please visit <a URL="https://ewindar.weebly.com/">here.</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 	</body>
